--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "electron-resium-template",
 	"version": "1.0.0",
 	"description": "",
-	"main": "src/index.js",
+	"main": "main.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "electron ."
@@ -11,6 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"electron": "^17.1.2"
+		"electron": "^17.1.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	}
 }
