--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"cesium": "^1.91.0",
 		"electron": "^17.1.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
