--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"cesium": "^1.91.0",
 		"electron": "^17.1.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"resium": "^1.14.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.8",
